# fe-reader

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  GOVERNANCE.md  IMPLEMENTATION_PROMPT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  VERSION.md  deny.toml  renovate.json  requirements-ci.txt  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  repository-metadata.yaml
benchmarks/: README.md
ci/: api-compat.yml.sample  compatibility.yml.sample  differential-oracles.yml.sample  performance.yml.sample  provenance.yml.sample  release-readiness.yml.sample  security.yml.sample
conductor/: automation.yaml  merge-policy.md  phase-gates.md  product-guidelines.md  product.md  review-policy.md  tech-stack.md  tracks.md  waves.yaml  workflow.md
contracts/: README.md  contract-manifest.yaml
crates/: Cargo.toml.sample  README.md
crates/fe_reader_accessibility/: Cargo.toml
crates/fe_reader_accessibility/src/: lib.rs
crates/fe_reader_cli/: Cargo.toml  Cargo.toml.sample
crates/fe_reader_cli/src/: main.rs
crates/fe_reader_forms/: Cargo.toml
crates/fe_reader_forms/src/: lib.rs
crates/fe_reader_pdf_model/: Cargo.toml  Cargo.toml.sample
crates/fe_reader_pdf_model/src/: lib.rs
crates/fe_reader_perf_benches/: Cargo.toml
crates/fe_reader_perf_benches/benches/: cachegrind_core.rs  callgrind_core.rs  dhat_core.rs
crates/fe_reader_perf_benches/src/: lib.rs
crates/fe_reader_plugin_host/: Cargo.toml  Cargo.toml.sample
crates/fe_reader_plugin_host/src/: lib.rs
crates/fe_reader_search/: Cargo.toml  Cargo.toml.sample
crates/fe_reader_search/src/: lib.rs
crates/fe_reader_security/: Cargo.toml  Cargo.toml.sample
crates/fe_reader_security/src/: lib.rs
crates/fe_reader_uniffi/: Cargo.toml  Cargo.toml.sample
crates/fe_reader_uniffi/src/: lib.rs
crates/fe_reader_workflows/: Cargo.toml
crates/fe_reader_workflows/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  perf.rs
docs/: advanced-pdf-family-parity-contract.md  api-compatibility-governance.md  architecture.md  bleeding-edge-policy.md  bleeding-edge-repo-policy.md  brand-and-positioning.md  capability-baseline-matrix.md  ci-cd-pipeline-map.md  coding-agent-evaluation-harness.md  collaboration-local-first.md  color-prepress-fonts-advanced.md  compatibility-corpus-governance.md  config-policy-engine.md  content-addressed-cache-workspace.md  contributor-community-governance.md  conversion-publishing-workflows.md  corpus-oracle-evidence-factory-contract.md  dependency-and-tool-version-policy.md  desktop-distribution-publication.md  desktop-release-packaging.md  deterministic-search-indexing.md  developer-ecosystem-sdk.md  differential-testing-oracles.md  document-ir-transformation-evidence.md  ecosystem-integrations-marketplace.md  engine-ir-and-transformation-pipeline.md  enterprise-deployment-policy.md  enterprise-operations-readiness.md  error-taxonomy-user-messages.md  exhaustive-pdf-parity-taxonomy-contract.md  external-application-integrations.md  feature-flag-runtime-capabilities.md  final-v4-improvements.md  final-v6-improvements.md  final-v7-improvements.md  final-v8-improvements.md  final-v9-improvements.md  forms-js-xfa-strategy.md  frontier-intelligence-governance.md  hardware-acceleration.md  (+90 more)
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
examples/: README.md
packaging/: codesigning.md  desktop-distribution.yaml  mobile-public-launch.json  package-matrix.yaml  registry-status.yaml  release-channels.yaml  release-waivers.yaml
schemas/: accessibility-audit.schema.json  accessibility-test-report.schema.json  active-content-finding.schema.json  adr.schema.json  api-compat-report.schema.json  app-integration.schema.json  audit-receipt.schema.json  cache-manifest.schema.json  color-prepress-report.schema.json  config-policy.schema.json  conversion-job.schema.json  differential-test-report.schema.json  distribution-target.schema.json  document-ir.schema.json  enterprise-policy.schema.json  error-taxonomy.schema.json  feature-flag.schema.json  file-format-version.schema.json  job-run.schema.json  metadata-operation.schema.json  operation-intent.schema.json  operation-transaction.schema.json  patch-plan.schema.json  pdf-document-summary.schema.json  pdf-lab-session.schema.json  pdf-optimization-plan.schema.json  pdf-parity-claim.schema.json  pdf-parity-registry.schema.json  platform-event.schema.json  platform-parity-matrix.schema.json  plugin-manifest.schema.json  power-budget.schema.json  public-quality-dashboard.schema.json  quality-signal.schema.json  recovery-report.schema.json  redaction-recipe.schema.json  release-evidence.schema.json  review-packet.schema.json  search-index.schema.json  security-policy.schema.json  (+11 more)
script/: build_and_run.sh
scripts/: accessibility_audit_smoke.py  actions_security_gate.sh  active_content_firewall_smoke.py  adr_validate.py  advanced_pdf_family_parity_check.py  advanced_roadmap_check.py  agent_eval_smoke.py  android_emulator_smoke.sh  annotation_contract_smoke.py  api_compat_check.sh  architecture_compliance_check.py  audit_receipt_contract_check.py  browser_extension_contract_smoke.py  c_abi_snapshot_check.sh  cache_workspace_smoke.sh  ci_policy_check.py  cli_golden_smoke.sh  compatibility_corpus_report.py  conductor_lifecycle_check.py  conductor_phase_gate.sh  content_credentials_provenance_smoke.py  contract_matrix_check.py  conversion_contract_smoke.sh  corpus_manifest_validate.py  corpus_oracle_evidence_factory_check.py  desktop_distribution_publication_check.py  desktop_packaging_signing_check.py  differential_oracle_smoke.sh  document_ir_contract_check.py  ecosystem_integrations_marketplace_check.py  enterprise_operations_readiness_check.py  exhaustive_pdf_parity_taxonomy_check.py  feature_flags_check.py  forms_contract_smoke.sh  frontier_ci_check.py  frontier_intelligence_governance_check.py  fuzz_smoke.sh  generate_provenance_attestation.sh  gpu_frontier_smoke.sh  (+102 more)
(+632 files in other folders)
