[workspace]
resolver = "2"
members = [
  "crates/fe_reader_core",
  "crates/fe_reader_pdf_model",
  "crates/fe_reader_render",
  "crates/fe_reader_render_pdfium",
  "crates/fe_reader_render_gpu",
  "crates/fe_reader_metadata",
  "crates/fe_reader_prepress",
  "crates/fe_reader_redaction",
  "crates/fe_reader_workflows",
  "crates/fe_reader_conversion",
  "crates/fe_reader_forms",
  "crates/fe_reader_security",
  "crates/fe_reader_search",
  "crates/fe_reader_text",
  "crates/fe_reader_compat",
  "crates/fe_reader_updates",
  "crates/fe_reader_observability",
  "crates/fe_reader_ir",
  "crates/fe_reader_jobs",
  "crates/fe_reader_config",
  "crates/fe_reader_accessibility",
  "crates/fe_reader_quality_dashboard",
  "crates/fe_reader_platform",
  "crates/fe_reader_cli",
  "crates/fe_reader_uniffi",
  "crates/fe_reader_c_abi",
  "crates/fe_reader_mcp",
  "crates/fe_reader_plugin_host",
  "crates/fe_reader_perf_benches",
  "crates/xtask"
]

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
jsonschema = "0.33" # schema validation tool crate; verify exact latest before materialising
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
time = { version = "0.3", features = ["serde", "formatting"] }
tracing = "0.1"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
camino = "1.1.11"

# PDF engine and generation
lopdf = "0.40.0"
pdf-writer = "0.14.0"
pdfium-render = "0.9.1"

# Bindings, automation, plugins
uniffi = "0.31.1"
rmcp = "1.6.0"
wasmtime = "44.0.1"
wasm-bindgen = "0.2.121"

# Rendering/performance frontier lanes
wgpu = "29.0.3"
vello = "0.8.0"
skia-safe = "0.93.1"

# Deterministic search/text/i18n
# Tantivy is the local full-text index candidate. Keep optional outside core.
tantivy = "0.26.1"
cosmic-text = "0.19.0"
rustybuzz = "0.20.1"
image = "0.25"

# Platform/application integration helper crates. Keep in adapters only.
keyring = "4.0.1"
notify-rust = "4.17.0"
zbus = "5.15.0"
tauri-plugin-updater = "2.10.1"

# Benchmarking/profiling
criterion = "0.8.2"
divan = "0.1.21"
iai-callgrind = "0.16.1"
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }
tracing-opentelemetry = "0.31" # optional diagnostics/export lane; disabled by default
rayon = "1.12.0"
dashmap = "6.1.0"
mimalloc = "0.1.50"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = false
codegen-units = 16
debug = "line-tables-only"
panic = "abort"
strip = "symbols"

[profile.release-thinlto]
inherits = "release"
lto = "thin"
codegen-units = 1

[profile.release-fat]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
lto = "thin"
codegen-units = 1


# v5 recommended developer tooling to install, not workspace dependencies:
# cargo install cargo-semver-checks cargo-public-api cargo-cyclonedx cargo-deny cargo-audit cargo-vet
# Optional PDF oracles: qpdf, veraPDF, poppler-utils, mupdf-tools, ghostscript, pandoc, libreoffice.


# v6 notes:
# - fe_reader_ir owns typed transformation contracts and must not perform IO.
# - fe_reader_jobs owns scheduling/progress/cancellation/resource limit contracts.
# - fe_reader_config owns settings/feature flags/policy evaluation.
# - fe_reader_accessibility owns UI/PDF accessibility audit contracts.
# - fe_reader_quality_dashboard aggregates reports generated by other crates/scripts.
