[package]
name = "fe_reader_accessibility"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
