[package]
name = "fe_reader_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "fe-reader"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
fe_reader_core = { path = "../fe_reader_core" }
fe_reader_metadata = { path = "../fe_reader_metadata" }
fe_reader_prepress = { path = "../fe_reader_prepress" }
fe_reader_accessibility = { path = "../fe_reader_accessibility" }
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
fe_reader_platform = { path = "../fe_reader_platform" }
fe_reader_render = { path = "../fe_reader_render" }
fe_reader_search = { path = "../fe_reader_search" }
fe_reader_security = { path = "../fe_reader_security" }
fe_reader_text = { path = "../fe_reader_text" }
