[package]
name = "fe_reader_forms"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
lopdf.workspace = true
fe_reader_core = { path = "../fe_reader_core" }
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
