[package]
name = "fe_reader_pdf_model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
lopdf.workspace = true
fe_reader_core = { path = "../fe_reader_core" }
