[package]
name = "fe_reader_perf_benches"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fe_reader_core = { path = "../fe_reader_core" }
fe_reader_ir = { path = "../fe_reader_ir" }
fe_reader_metadata = { path = "../fe_reader_metadata" }
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
fe_reader_text = { path = "../fe_reader_text" }
fe_reader_workflows = { path = "../fe_reader_workflows" }
fe_reader_render = { path = "../fe_reader_render" }
iai-callgrind.workspace = true
serde_json.workspace = true

[[bench]]
name = "callgrind_core"
harness = false
