[package]
name = "fe_reader_plugin_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
extism.workspace = true
fe_reader_core = { path = "../fe_reader_core" }
