[package]
name = "fe_reader_search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
search_tantivy = ["dep:tantivy"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tantivy = { workspace = true, optional = true }
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
