[package]
name = "fe_reader_uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow.workspace = true
uniffi.workspace = true
fe_reader_core = { path = "../fe_reader_core" }

[build-dependencies]
uniffi.workspace = true
