[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
fe_reader_ir = { path = "../fe_reader_ir" }
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
fe_reader_render = { path = "../fe_reader_render" }
serde_json.workspace = true
