[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
fe_reader_core = { path = "../fe_reader_core" }
fe_reader_ir = { path = "../fe_reader_ir" }
fe_reader_jobs = { path = "../fe_reader_jobs" }
fe_reader_metadata = { path = "../fe_reader_metadata" }
fe_reader_pdf_model = { path = "../fe_reader_pdf_model" }
fe_reader_redaction = { path = "../fe_reader_redaction" }
fe_reader_search = { path = "../fe_reader_search" }
fe_reader_workflows = { path = "../fe_reader_workflows" }
fe_reader_text = { path = "../fe_reader_text" }
fe_reader_render = { path = "../fe_reader_render" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2.workspace = true
